--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "build": "next build",
     "start": "next start",
     "type-check": "tsc",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint src"
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "1.6.2",
@@ -25,11 +26,25 @@
     "@types/react": "17.0.21",
     "@types/react-dom": "17.0.9",
     "@types/react-redux": "7.1.18",
+    "@typescript-eslint/eslint-plugin": "5.8.0",
+    "@typescript-eslint/parser": "5.8.0",
+    "eslint": "8.5.0",
+    "eslint-plugin-react": "7.28.0",
+    "husky": "4",
     "jest": "27.2.0",
     "jest-css-modules-transform": "4.2.0",
+    "lint-staged": "12.1.4",
     "prisma": "3.7.0",
     "ts-jest": "27.0.5",
     "ts-node": "10.2.1",
     "typescript": "4.3.4"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{ts,tsx,js,jsx}": ["eslint src --fix", "git add ."]
   }
 }
