--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-redux": "7.2.0"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "12.0.7",
     "@testing-library/jest-dom": "5.0.0",
     "@testing-library/react": "12.1.0",
     "@testing-library/user-event": "13.0.0",
@@ -45,6 +46,9 @@
     }
   },
   "lint-staged": {
-    "*.{ts,tsx,js,jsx}": ["eslint src --fix", "git add ."]
+    "*.{ts,tsx,js,jsx}": [
+      "eslint src --fix",
+      "git add ."
+    ]
   }
 }
