--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "1.6.2",
+    "@elastic/datemath": "5.0.3",
+    "@elastic/eui": "43.1.1",
+    "@emotion/react": "11.7.1",
     "@prisma/client": "3.7.0",
     "@reduxjs/toolkit": "1.3.6",
+    "moment": "2.29.1",
     "next": "latest",
+    "prop-types": "15.8.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-redux": "7.2.0"
