--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@emotion/react": "11.7.1",
     "@prisma/client": "3.7.0",
     "@reduxjs/toolkit": "1.3.6",
+    "axios": "^0.26.0",
     "moment": "2.29.1",
     "next": "latest",
     "prop-types": "15.8.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-redux": "7.2.0"
+    "react-redux": "7.2.0",
+    "sass": "^1.49.9"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "12.0.7",
