--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "dev": "next",
+    "dev": "bash ./checkRunningServices",
     "build": "next build",
     "start": "next start",
     "type-check": "tsc",
@@ -13,7 +13,6 @@
     "@elastic/datemath": "5.0.3",
     "@elastic/eui": "43.1.1",
     "@emotion/react": "11.7.1",
-    "@prisma/client": "3.7.0",
     "@reduxjs/toolkit": "1.3.6",
     "axios": "^0.26.0",
     "moment": "2.29.1",
@@ -42,7 +41,6 @@
     "jest": "27.2.0",
     "jest-css-modules-transform": "4.2.0",
     "lint-staged": "12.1.4",
-    "prisma": "3.7.0",
     "ts-jest": "27.0.5",
     "ts-node": "10.2.1",
     "typescript": "4.3.4"
