fix pre-commit lint-staged hook

--- a/package.json
+++ b/package.json
@@ -52,8 +52,7 @@
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx}": [
-      "eslint src --fix",
-      "git add ."
+      "eslint src --fix"
     ]
   }
 }
