--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "private": true,
   "scripts": {
     "dev": "bash ./checkRunningServices",
+    "deploy": "bash ./deploy",
     "build": "next build",
     "start": "next start",
     "type-check": "tsc",
@@ -16,12 +17,13 @@
     "@reduxjs/toolkit": "1.3.6",
     "axios": "^0.26.0",
     "moment": "2.29.1",
-    "next": "latest",
+    "next": "12.1.0",
     "prop-types": "15.8.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-redux": "7.2.0",
-    "sass": "^1.49.9"
+    "sass": "^1.49.9",
+    "sharp": "^0.30.2"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "12.0.7",
