--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/react": "11.7.1",
     "@reduxjs/toolkit": "1.3.6",
     "axios": "^0.26.0",
+    "classnames": "^2.3.1",
     "moment": "2.29.1",
     "next": "12.1.0",
     "prop-types": "15.8.0",
