--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,6 +14,14 @@
         "action": "debugWithChrome",
         "webRoot": "${workspaceFolder}",
       }
+    },
+    {
+      "name": "Debug: launch backend",
+      "type": "node-terminal",
+      "request": "launch",
+      "command": "npm run dev",
+      "console": "integratedTerminal",
+      "userDataDir": false
     }
   ]
 }
