--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@auth0/nextjs-auth0": "1.6.2",
     "@elastic/datemath": "5.0.3",
     "@elastic/eui": "43.1.1",
-    "@emotion/react": "11.7.1",
+    "@emotion/react": "^11.8.1",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.4.4",
+    "@mui/material": "^5.4.4",
     "@reduxjs/toolkit": "1.3.6",
     "axios": "^0.26.0",
     "classnames": "^2.3.1",
