--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "classnames": "^2.3.1",
     "moment": "2.29.1",
     "next": "12.1.0",
+    "next-redux-wrapper": "^7.0.5",
     "prop-types": "15.8.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
