--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@typescript-eslint/parser": "5.8.0",
     "eslint": "8.5.0",
     "eslint-plugin-react": "7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "husky": "4",
     "jest": "27.2.0",
     "jest-css-modules-transform": "4.2.0",
