--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@reduxjs/toolkit": "1.3.6",
     "axios": "^0.26.0",
     "classnames": "^2.3.1",
+    "lodash.capitalize": "^4.2.1",
     "moment": "2.29.1",
     "next": "12.1.0",
     "next-redux-wrapper": "^7.0.5",
@@ -36,6 +37,7 @@
     "@testing-library/react": "12.1.0",
     "@testing-library/user-event": "13.0.0",
     "@types/jest": "27.0.1",
+    "@types/lodash.capitalize": "^4.2.6",
     "@types/node": "16.9.1",
     "@types/react": "17.0.21",
     "@types/react-dom": "17.0.9",
