--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "next-redux-wrapper": "^7.0.5",
     "prop-types": "15.8.0",
     "react": "17.0.2",
+    "react-countdown": "^2.3.2",
     "react-dom": "17.0.2",
     "react-redux": "7.2.0",
     "sass": "^1.49.9",
