--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-dom": "17.0.2",
     "react-redux": "7.2.0",
     "sass": "^1.49.9",
-    "sharp": "^0.30.2"
+    "sharp": "^0.30.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "12.0.7",
@@ -48,6 +49,7 @@
     "@types/react": "17.0.21",
     "@types/react-dom": "17.0.9",
     "@types/react-redux": "7.1.18",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "5.8.0",
     "@typescript-eslint/parser": "5.8.0",
     "eslint": "8.5.0",
