--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-countdown": "^2.3.2",
     "react-dom": "17.0.2",
     "react-redux": "7.2.0",
+    "react-toastify": "^8.2.0",
     "sass": "^1.49.9",
     "sharp": "^0.30.2",
     "uuid": "^8.3.2"
