--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "@reduxjs/toolkit": "1.3.6",
     "axios": "^0.26.0",
     "classnames": "^2.3.1",
+    "form-data": "^4.0.0",
     "lodash.capitalize": "^4.2.1",
     "moment": "2.29.1",
+    "multer": "^1.4.4",
     "next": "12.1.0",
     "next-redux-wrapper": "^7.0.5",
     "prop-types": "15.8.0",
@@ -46,6 +48,7 @@
     "@testing-library/user-event": "13.0.0",
     "@types/jest": "27.0.1",
     "@types/lodash.capitalize": "^4.2.6",
+    "@types/multer": "^1.4.7",
     "@types/node": "16.9.1",
     "@types/react": "17.0.21",
     "@types/react-dom": "17.0.9",
