--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-countdown": "^2.3.2",
     "react-dom": "17.0.2",
     "react-redux": "7.2.0",
+    "react-table": "^7.7.0",
     "react-toastify": "^8.2.0",
     "sass": "^1.49.9",
     "sharp": "^0.30.2",
@@ -53,6 +54,7 @@
     "@types/react": "17.0.21",
     "@types/react-dom": "17.0.9",
     "@types/react-redux": "7.1.18",
+    "@types/react-table": "^7.7.10",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "5.8.0",
     "@typescript-eslint/parser": "5.8.0",
