--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-toastify": "^8.2.0",
     "sass": "^1.49.9",
     "sharp": "^0.30.2",
+    "styled-components": "^5.3.5",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
@@ -55,6 +56,7 @@
     "@types/react-dom": "17.0.9",
     "@types/react-redux": "7.1.18",
     "@types/react-table": "^7.7.10",
+    "@types/styled-components": "^5.1.25",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "5.8.0",
     "@typescript-eslint/parser": "5.8.0",
