--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "classnames": "^2.3.1",
     "form-data": "^4.0.0",
     "lodash.capitalize": "^4.2.1",
+    "lodash.debounce": "^4.0.8",
     "moment": "2.29.1",
     "multer": "^1.4.4",
     "next": "12.1.0",
@@ -50,6 +51,7 @@
     "@testing-library/user-event": "13.0.0",
     "@types/jest": "27.0.1",
     "@types/lodash.capitalize": "^4.2.6",
+    "@types/lodash.debounce": "^4.0.7",
     "@types/multer": "^1.4.7",
     "@types/node": "16.9.1",
     "@types/react": "17.0.21",
