--- a/package.json
+++ b/package.json
@@ -2,11 +2,18 @@
   "private": true,
   "scripts": {
     "dev": "yarn install && bash ./checkRunningServices",
+    "dev:test": "NODE_ENV=test yarn dev -p 8080",
     "deploy": "bash ./deploy",
     "build": "next build",
     "start": "next start",
     "type-check": "tsc",
-    "test": "jest",
+    "cypress:open": "cypress open",
+    "start-server": "next build && next start",
+    "start-server:test": "NODE_ENV=test yarn start-server -p 8080",
+    "test": "cypress run",
+    "e2e:production": "start-server-and-test start-server:test http://localhost:8080 test",
+    "e2e:local": "start-server-and-test dev:test http://localhost:8080 test",
+    "e2e:debug": "start-server-and-test dev:test http://localhost:8080 cypress:open",
     "lint": "eslint src"
   },
   "dependencies": {
@@ -62,13 +69,16 @@
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "5.8.0",
     "@typescript-eslint/parser": "5.8.0",
+    "cypress": "^9.6.0",
     "eslint": "8.5.0",
+    "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-react": "7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "husky": "4",
     "jest": "27.2.0",
     "jest-css-modules-transform": "4.2.0",
     "lint-staged": "12.1.4",
+    "start-server-and-test": "^1.14.0",
     "ts-jest": "27.0.5",
     "ts-node": "10.2.1",
     "typescript": "4.3.4"
